<resources>
    <string name="app_name">Event Dicoding</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_past">Past</string>
    <string name="card_description">Description</string>
    <string name="title_date">Date</string>
    <string name="title_quota">Sisa Kouta:</string>
    <string name="title_author">Author</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="button_register">Register</string>
    <string name="dark_mode">Dark Mode</string>
</resources>