<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_upcoming_event">

    <fragment
        android:id="@+id/navigation_past_event"
        android:name="com.example.eventdicoding.ui.pastEvent.PastEventFragment"
        android:label="@string/title_past"
        tools:layout="@layout/fragment_past" />
    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.eventdicoding.ui.upcomingEvent.UpcomingEventFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.eventdicoding.ui.favoriteEvent.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_upcoming" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.eventdicoding.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_upcoming" />

</navigation>