<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailsEvent.DetailsEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailEventFragment">

        <ImageView
            android:id="@+id/card_detail_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/card_description"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_detail_image" />

        <TextView
            android:id="@+id/card_date"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_date"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_author" />


        <TextView
            android:id="@+id/card_end_date"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/title_date"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/card_date"
            app:layout_constraintTop_toBottomOf="@+id/title_author" />

        <TextView
            android:id="@+id/card_qouta"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_quota"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_description" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/title_quota"
            android:textAlignment="textEnd"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/card_qouta"
            app:layout_constraintTop_toBottomOf="@+id/card_description" />

        <TextView
            android:id="@+id/title_author"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:text="@string/title_author"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_description" />

        <TextView
            android:id="@+id/title_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_author"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_date" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/button_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_desc" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/iv_bookmark"
            android:layout_width="63dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_detail_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_favorite_border_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>